fixed bug with songs overlapping each other

--- a/src/pages/design 1/d1-components/artist/artist.module.css
+++ b/src/pages/design 1/d1-components/artist/artist.module.css
@@ -27,6 +27,12 @@
     align-items: center;
 }
 
+.spot-wrapper {
+    display: flex;
+    justify-content: space-between;
+    width: 30vw;
+}
+
 .spot-link {
     color: #96aa21;
     font-size: 10vw;
